# textPaint

./: CMakeLists.txt  README.md
common/utils/: Callbacks.cpp  Image.cpp  Image.hpp  Model.hpp
src/: main.cpp  tex_paint.zpr
